# rics

./: .bumpversion.cfg  .codespellrc  .coveragerc  .darglint  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  LICENSE.rst  README.md  codecov.yml  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  run-docker-dvdrental.sh  run-invocations.sh  run-jupyter.sh  tasks.py
.github/workflows/: codeql-analysis.yml  pre-commit-autoupdate.yml  release.yml  tests.yml
docs/: api.rst  conf.py  index.rst  installation.rst  modules.rst  nitpick-regex-exceptions  requirements.txt  rics.cardinality.rst  rics.mapping.rst  rics.rst  rics.translation.dio.rst  rics.translation.fetching.rst  rics.translation.offline.rst  rics.translation.rst  rics.utility.collections.rst  rics.utility.perf.rst  rics.utility.rst  translation-api.rst  translation-config-format.rst  translation-format.rst  translation-quickstart.rst  usage.rst  utility-data-download.rst  utility-logging.rst  utility-more.rst  utility-perftest.rst  utility.rst
docs/_static/: style.css
docs/_templates/: homepage.html  layout.html
docs/cookbook/: git.md
docs/documentation/: dvdrental-scores.csv  index.rst  mapping-primer.rst  translation-primer.rst  translator-config.rst
docs/documentation/cli/: index.rst  mtimeit.rst
docs/documentation/cookbook/: binary-search.md  git.md  index.rst  notebooks.md  sphinx.md  terminal.md  uv.md
docs/documentation/examples/: index.rst
docs/examples/: dvdrental.csv  dvdrental.rst
docs/examples/notebooks/: !PLACEHOLDER.md
examples/time_split/: README.rst  cron_schedule_keep_all_before.py  list_schedule_no_data.py  n_splits_dynamic_before_and_after.py  plot_example_1.py  plot_example_2.py  plot_example_3.py  plot_example_4.py  plot_example_5.py  plot_example_6.py  step.py  timedelta_schedule_5_days_before.py  timedelta_schedule_and_after.py
jupyterlab/: NOTES.md  data.py  jupyter_lab_config.py
jupyterlab/data-cache/: !PLACEHOLDER.md
jupyterlab/demo/: animals_and_people.json
jupyterlab/demo/cookbook/: translation.ipynb
jupyterlab/demo/in-vs-between/: In-vs-Between.ipynb  candidates.py
jupyterlab/demo/pickle-translation/: PickleFetcher.ipynb  config.toml  config.yaml
jupyterlab/demo/plotting/: Style.ipynb  pi_ticks.ipynb
jupyterlab/demo/sql-translation/: SqlFetcher.ipynb  config.toml  config.yaml
jupyterlab/perf-test/: PerfTestTemplate.ipynb
jupyterlab/perf-test/python/: OrVsIsNone.ipynb
jupyterlab/perf-test/rics-package/: FormatApplier.ipynb
jupyterlab/perf-test/sql/: In-vs-Between.ipynb
notebooks/cli/: cli.ipynb  kernel.ipynb  mtimeit.ipynb  timeit.ipynb
notebooks/demo/in-vs-between/: In-vs-Between.ipynb
notebooks/demo/plotting/: Style.ipynb  pi_ticks.ipynb
notebooks/perf-test/: GroupByRowSelection.ipynb  OrVsIsNone.ipynb  PerfTestTemplate.ipynb
src/rics/: __init__.py  __main__.py  __version__.py  _cli_repos.py  _just_the_way_i_like_it.py  _kwargs_formatter.py  action_level.py  cli.py  logs.py  misc.py  paths.py  plotting.py  strings.py  types.py
src/rics/_internal_support/: __init__.py  _local_or_remote.py  make_toc_tree_titles_shorter.py  myst_parser_markdown_doc_refs.py  types.py
src/rics/cardinality/: __init__.py  _enum.py  exceptions.py
src/rics/click/: __init__.py  _alias_command_group.py  _logging.py  _util.py
src/rics/collections/: __init__.py  dicts.py  misc.py
src/rics/env/: __init__.py
src/rics/envinterp/: __init__.py  _file_utils.py  _variable.py
src/rics/jupyter/: __init__.py  _kernel_helper.py  _kernel_spec.py  _print_paths.py  _venv_helper.py  cli.py
src/rics/mapping/: __init__.py  _cardinality.py  _directional_mapping.py  _heuristic_score.py  _mapper.py  exceptions.py  filter_functions.py  heuristic_functions.py  score_functions.py  support.py  types.py
src/rics/ml/: __init__.py
src/rics/pandas/: __init__.py  _time_fold.py
src/rics/performance/: __init__.py  _autonumber.py  _format_perf_counter.py  _generated_data.py  _multi_case_timer.py  _progress.py  _skip_if.py  _strata.py  _util.py  _wrapper.py  _wrappers.py  cli.py  plot_types.py  types.py
src/rics/translation/: __init__.py  _config_utils.py  _from_config.py  _translator.py  exceptions.py  factory.py  testing.py  types.py
src/rics/utility/: __init__.py  _just_the_way_i_like_it.py  action_level.py  collections.py  logs.py  misc.py  plotting.py  strings.py
src/rics/wip/: CHANGELOG.md  __init__.py  pandas.py
tests/: __init__.py  test_action_level.py  test_cli.py  test_logs.py  test_misc.py  test_paths.py  test_plotting.py  test_rics.py  test_strings.py
tests/cardinality/: test_cardinality.py
tests/collection_tests/: test_dicts.py  test_misc.py
tests/env/interpolation/: __init__.py  conftest.py  test_basics.py  test_nested.py  test_wrapper.py
tests/env/read/: test_bool.py  (+2 more)
tests/envinterp/: __init__.py  conftest.py  test_basics.py  test_file_utils.py  test_nested.py  test_wrapper.py
tests/jupyter/: conftest.py  test_cli.py
tests/mapping/: conftest.py  test_bidirectional_mapping.py  test_cardinality.py  test_filter.py  test_filter_functions.py  test_heuristic_score.py  test_heuristics_functions.py  test_mapper.py  test_mapper_hierarchy.py  test_score_functions.py  test_support.py  words.txt
tests/pandas_tests/: test_time_fold.py
tests/performance/: run-results.json  test_cli.py  test_format.py  test_format_perf_counter.py  test_generated_data.py  test_plot.py  test_progress.py  test_strata.py  test_timer.py  test_util.py  test_wrapper.py
tests/test_misc/: data.py  test_format_kwargs.py  test_get_by_full_name.py  test_small.py  test_tname.py
tests/test_strings/: test_format_kwargs.py  test_format_time.py
tests/test_types/: test_verify.py
tests/translation/: bad-config.toml  bad-config.yaml  config.imdb.toml  config.imdb.yaml  config.toml  config.yaml  conftest.py  test_factory.py  test_translator.py
tests/utility/: __init__.py  test_action_level.py  test_collections.py  test_logs.py  test_misc.py  test_plotting.py  test_strings.py
tests/wip/: test_pandas.py
(+162 files in other folders)
