[tool.poetry]
name = "rics"
version = "0.15.0"
description = "My personal little ML engineering library."
authors = ["Richard Sundqvist <richard.sundqvist@live.se>"]

readme = "README.md"
homepage = "https://github.com/rsundqvist/rics"
repository = "https://github.com/rsundqvist/rics"
documentation = "https://rics.readthedocs.io"
keywords = ["rics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/rsundqvist/rics/issues"

[tool.poetry.scripts]
rics-perf = "rics.performance.cli:_main"

[tool.poetry.dependencies]
python = "<3.11,>=3.8"

click = "*"
pandas = ">=1.1"

# [tool.poetry.group.translation.dependencies]
sqlalchemy = { version = ">=1.0.0", optional = true }
toml = { version = ">=0.10.2", optional = true }
# [tool.poetry.group.plotting]
matplotlib = { version = "*", optional = true }
seaborn = { version = "*", optional = true }

[tool.poetry.extras]
translation = ["sqlalchemy", "toml"]
plotting = ["matplotlib", "seaborn"]

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
invoke = "^1.7.1"
flake8 = "^4.0.1"
flakeheaven = "==2.1.3"
flake8-builtins = "^1.5.3"
flake8-blind-except = "^0.2.1"
flake8-logging-format = "^0.6.0"
flake8-bugbear = "^22.4.25"
flake8-annotations = "^2.9.0"
flake8-docstrings = "^1.6.0"
flake8-bandit = "^3.0.0"
darglint = "^1.8.1"
isort = "^5.10.1"
black = { version = "^22", extras = ["jupyter"] }
safety = "^2.1.1"
mypy = "^0.971"
# duplicate object warnings for sphinx>=4
# description: https://github.com/astropy/astropy/issues/11723
# https://github.com/astropy/astropy/pull/12270
sphinx = "^5.1.1"
pydata-sphinx-theme = "^0.9.0"
myst-parser = "^0.18.0"
nbsphinx = "^0.8.9"
bump2version = "^1.0.1"
pytest = "^7.1.2"
xdoctest = "^1.0.1"
coverage = "^6.4.2"
pytest-cov = "^3.0.0"
watchdog = { version = "^2.1.6", extras = ["watchmedo"] }

# Should move the jupyter stuff when possible
jupyterlab = "^3"
ipywidgets = "*"
jupyterlab_execute_time = "*"
pg8000 = ">=1.29.1"  # Pure-python psql driver

[tool.flakeheaven]
format = "grouped"
max_line_length = 120
show_source = true
docstring-convention = "google"
extended_default_ignore = []

[tool.flakeheaven.plugins]
pyflakes = ["+*"]
pycodestyle = ["+*",
    "-W503", # Line break occurred before a binary operator - conflicts with W504
    "+W504", # Line break occurred after a binary operator - keeping this one
    "-E203", # Whitespace before ':' - conflicts with black
]
mccabe = ["+*"]
"flake8-*" = ["+*"]
darglint = ["+*"]

flake8-annotations = ["+*",
    "-ANN101", "-ANN102", # Typehint for self/cls
    "-ANN401"             # Allow typing.Any
]
flake8-docstrings = ["+*",
    "-D105", # Missing docstring in magic method
    "-D107", # Missing docstring in __init__ - special case of D105. Init docstring = class docstring.
]
flake8-darglint = ["+*",
    "-DAR203", # The docstring parameter type doesn't match function. - Let mypy handle types
    "-DAR402", # The docstring describes an exception not explicitly raised. - for delegates that raise
]
flake8-logging-format = ["+*",
    "-G004", # Logging statements should not use fstring. - I think this is fine IFF under enabledFor-guard
]

[tool.flakeheaven.exceptions."src/rics/translation/fetching/"]
flake8-docstrings = ["-D102"]  # Docstrings are inherited
[tool.flakeheaven.exceptions."src/rics/translation/dio/"]
flake8-docstrings = ["-D102"]  # Docstrings are inherited

[tool.flakeheaven.exceptions."src/rics/mapping/score_functions.py"]
flake8-darglint = ["-DAR101", "-DAR301"]

[tool.flakeheaven.exceptions."src/rics/translation/testing.py"]
flake8-docstrings = ["-DAR101", "-D102"]

[tool.flakeheaven.exceptions."tests/"]
# Test modules/classes/functions are never "really" public, and I don't want to typehint/document all of them :).
flake8-bandit = ["-S101", "-S301", "-S403"]
flake8-docstrings = ["-D100", "-D101", "-D102", "-D103"]
flake8-darglint = ["-DAR101"]
flake8-annotations = ["-ANN001", "-ANN101", "-ANN102", "-ANN201", "-ANN202", "-ANN204"]

[tool.flakeheaven.exceptions."jupyterlab/"]
flake8-annotations = ["-*"]
flake8-docstrings = ["-*"]

[tool.flakeheaven.exceptions."src/rics/__init__.py"]
pyflakes = ["-F401"]  # Module imported but unused - False positive for __version__; IDE solves for real positives


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120
known_third_party = ["invoke", "nox"]
combine_as_imports = true

[tool.black]
line-length = 120
target-version = ["py38"]

[build-system]
requires = ["poetry==1.1.13"]
build-backend = "poetry.masonry.api"
